--- a/src/extension/options.html
+++ b/src/extension/options.html
@@ -5,18 +5,23 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>Github Enhacements Options</title>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 		<link rel="stylesheet" href="css/options.css">
 	</head>
 	<body>
 		<main class="container">
 			<div class="option is-active">
-				<input id="full-width" class="checkbox" type="checkbox" name="ui|full_width" value="1" checked>
-				<label for="full-width">Use full width layout</label>
+				<label class="control" for="full-width">First checkbox
+					<input id="full-width" type="checkbox" name="ui|full_width" />
+					<div class="checkbox"></div>
+				</label>
 			</div>
 			<div class="option">
-					<input id="full-width2" class="checkbox" type="checkbox" name="ui|full_width" value="1" checked>
-					<label for="full-width2">Use full width layout</label>
-				</div>
+				<label class="control">First checkbox
+					<input type="checkbox" checked="checked"/>
+					<div class="checkbox"></div>
+				</label>
+			</div>
 			<a href="#" id="submit">SAVE!</a>
 			<a href="#" id="defaults">DEFAULTS</a>
 		</main>
